# notatus

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/notatus-core/: Cargo.toml
crates/notatus-core/src/: dataset.rs  geometry.rs  ids.rs  lib.rs
crates/notatus-export/: Cargo.toml
crates/notatus-export/src/: classification.rs  coco.rs  error.rs  filter.rs  lib.rs  tests.rs  yolo.rs
crates/notatus-infer/: Cargo.toml
crates/notatus-infer/src/: lib.rs
crates/notatus-storage/: Cargo.toml
crates/notatus-storage/src/: lib.rs
crates/notatus-telemetry/: Cargo.toml
crates/notatus-telemetry/src/: lib.rs
crates/notatus-ui/: Cargo.toml
crates/notatus-ui/src/: gpui_shell.rs  lib.rs  main.rs  state.rs
crates/notatus-ui/src/app/: bottom_bar.rs  commands.rs  export_commands.rs  gpui_tests.rs  helpers.rs  left_dock.rs  media_import.rs  mod.rs  project_commands.rs  project_session.rs  right_dock.rs  titlebar.rs  window.rs
crates/notatus-ui/src/app/canvas/: color.rs  hit_test.rs  interaction.rs  layout.rs  mod.rs  overlay.rs
crates/notatus-ui/src/app/export_commands/: dialog.rs  runner.rs  workflow.rs
crates/notatus-ui/src/app/left_dock/: labels.rs  media.rs  project.rs
crates/notatus-ui/src/app/tools/: definitions.rs  edit.rs  mod.rs  state.rs  toolbar.rs
crates/notatus-ui/src/gpui_shell/: canvas.rs  commands.rs  helpers.rs  left_dock.rs  mod.rs  right_dock.rs  tools.rs  window.rs
crates/notatus-ui/src/gpui_shell/canvas/: interaction.rs  overlay.rs
crates/notatus-ui/src/gpui_shell/tools/: definitions.rs  mod.rs  state.rs  toolbar.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  core-schema.md  development.md  import-export.md  inference.md  introduction.md  roadmap.md  storage.md  ui.md  workspace.md
