[workspace]
members = [
    "crates/notatus-core",
    "crates/notatus-storage",
    "crates/notatus-export",
    "crates/notatus-infer",
    "crates/notatus-telemetry",
    "crates/notatus-ui",
]
resolver = "2"

[workspace.package]
authors = ["Caio Piccirillo"]
edition = "2024"
license = "MIT"
rust-version = "1.96.0"

[workspace.dependencies]
notatus-core = { path = "crates/notatus-core" }
notatus-storage = { path = "crates/notatus-storage" }
notatus-export = { path = "crates/notatus-export" }
notatus-infer = { path = "crates/notatus-infer" }
notatus-telemetry = { path = "crates/notatus-telemetry" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
uuid = { version = "1.8", features = ["fast-rng", "serde", "v7"] }
tempfile = "3.10"

# OpenTelemetry / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto"] }
